--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       if (slider.value == 0) {
         body.style.backgroundColor = 'rgba(255, 100, 100, 0.3)'; // Бледно-красный
         status.textContent = 'Не дома';
-        dogImage.src = 'https://via.placeholder.com/300?text=Sad+Dog'; // Грустная собака
+        dogImage.src = 'https://i.postimg.cc/pLjFJ5TD/2025-08-19-16-33-44.png'; // Грустная собака
         sendStatus('не дома');
       } else {
         body.style.backgroundColor = 'rgba(100, 255, 100, 0.3)'; // Светло-зелёный
         status.textContent = 'Дома';
-        dogImage.src = 'https://via.placeholder.com/300?text=Happy+Dog'; // Счастливая собака
+        dogImage.src = 'https://i.postimg.cc/g2c0nwhz/2025-08-19-16-37-23.png'; // Счастливая собака
         sendStatus('дома');
       }
     }
